--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,54 +1,59 @@
-version: '2.1'
+version: '3.9'
+
 
 networks:
-  monitor-net:
-    driver: bridge
+  monitoring:
+    name: monitoring-internal
+  proxy:
+    external: true
+
 
 volumes:
-    prometheus_data: {}
-    grafana_data: {}
+    monitoring-prometheus-data:
+      name: monitoring-prometheus-data
+    monitoring-grafana-data:
+      name: monitoring-grafana-data
+    monitoring-loki-data:
+      name: monitoring-loki-data
+
 
 services:
-
   prometheus:
-    image: prom/prometheus:v2.46.0
+    image: prom/prometheus:latest
     container_name: prometheus
     volumes:
       - ./prometheus:/etc/prometheus
-      - prometheus_data:/prometheus
+      - monitoring-prometheus-data:/prometheus
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=200h'
+      - '--storage.tsdb.retention.time=168h'
       - '--web.enable-lifecycle'
     restart: unless-stopped
-    expose:
-      - 9090
     networks:
-      - monitor-net
+      - monitoring
+      - proxy
     labels:
       org.label-schema.group: "monitoring"
 
   alertmanager:
-    image: prom/alertmanager:v0.25.0
+    image: prom/alertmanager:latest
     container_name: alertmanager
     volumes:
-      - ./alertmanager:/etc/alertmanager
+      - ./alertmanager:/etc/alertmanager:ro
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
     restart: unless-stopped
-    expose:
-      - 9093
     networks:
-      - monitor-net
+      - monitoring
     labels:
       org.label-schema.group: "monitoring"
 
   nodeexporter:
-    image: prom/node-exporter:v1.6.1
+    image: prom/node-exporter:latest
     container_name: nodeexporter
     volumes:
       - /proc:/host/proc:ro
@@ -60,17 +65,30 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     restart: unless-stopped
-    expose:
-      - 9100
     networks:
-      - monitor-net
+      - monitoring
+    labels:
+      org.label-schema.group: "monitoring"
+
+  docker-exporter:
+    image: cefadrom/docker-exporter:1
+    container_name: docker-exporter
+    volumes:
+      - /:/rootfs:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
+    networks:
+      - monitoring
     labels:
       org.label-schema.group: "monitoring"
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor:v0.47.1
+    image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
     privileged: true
+    command:
+      - '-housekeeping_interval=10s'
+      - '-docker_only=true'
     devices:
       - /dev/kmsg:/dev/kmsg
     volumes:
@@ -78,62 +96,71 @@ services:
       - /var/run:/var/run:ro
       - /sys:/sys:ro
       - /var/lib/docker:/var/lib/docker:ro
-      #- /cgroup:/cgroup:ro #doesn't work on MacOS only for Linux
+      - /cgroup:/cgroup:ro
     restart: unless-stopped
-    expose:
-      - 8080
     networks:
-      - monitor-net
+      - monitoring
     labels:
       org.label-schema.group: "monitoring"
 
   grafana:
-    image: grafana/grafana:10.0.3
+    image: grafana/grafana:latest
     container_name: grafana
     volumes:
-      - grafana_data:/var/lib/grafana
-      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+      - monitoring-grafana-data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+    restart: unless-stopped
+    networks:
+      - monitoring
+      - proxy
     environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
-    restart: unless-stopped
-    expose:
-      - 3000
-    networks:
-      - monitor-net
+      - GF_SERVER_DOMAIN
+      - GF_SERVER_ROOT_URL
+      - GF_SERVER_ENABLE_GZIP
+      - GF_DASHBOARDS_VERSIONS_TO_KEEP
+      - GF_DASHBOARDS_MIN_REFRESH_INTERVAL
+      - GF_SECURITY_ADMIN_PASSWORD
+      - GF_USERS_ALLOW_SIGN_UP
+      - GF_AUTH_BASIC_ENABLED
+      - GF_AUTH_GENERIC_OAUTH_ENABLED
+      - GF_AUTH_GENERIC_OAUTH_NAME
+      - GF_AUTH_GENERIC_OAUTH_ALLOW_SIGN_UP
+      - GF_AUTH_GENERIC_OAUTH_AUTO_LOGIN
+      - GF_AUTH_GENERIC_OAUTH_CLIENT_ID
+      - GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET
+      - GF_AUTH_GENERIC_OAUTH_SCOPES
+      - GF_AUTH_GENERIC_OAUTH_EMPTY_SCOPES
+      - GF_AUTH_GENERIC_OAUTH_LOGIN_ATTRIBUTE_PATH
+      - GF_AUTH_GENERIC_OAUTH_NAME_ATTRIBUTE_PATH
+      - GF_AUTH_GENERIC_OAUTH_AUTH_URL
+      - GF_AUTH_GENERIC_OAUTH_TOKEN_URL
+      - GF_AUTH_GENERIC_OAUTH_API_URL
+      - GF_AUTH_GENERIC_OAUTH_GROUPS_ATTRIBUTE_PATH
+      - GF_AUTH_GENERIC_OAUTH_USE_PKCE
+      - GF_AUTH_GENERIC_OAUTH_SKIP_ORG_ROLE_SYNC
     labels:
       org.label-schema.group: "monitoring"
 
-  pushgateway:
-    image: prom/pushgateway:v1.6.0
-    container_name: pushgateway
+  loki:
+    image: grafana/loki:latest
+    container_name: loki
     restart: unless-stopped
-    expose:
-      - 9091
     networks:
-      - monitor-net
+      - monitoring
     labels:
       org.label-schema.group: "monitoring"
-
-  caddy:
-    image: caddy:2.6.4
-    container_name: caddy
-    ports:
-      - "3000:3000"
-      - "8080:8080"
-      - "9090:9090"
-      - "9093:9093"
-      - "9091:9091"
     volumes:
-      - ./caddy:/etc/caddy
-    environment:
-      - ADMIN_USER=${ADMIN_USER:-admin}
-      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$14$1l.IozJx7xQRVmlkEQ32OeEEfP5mRxTpbDTCTcXRqn19gXD8YK1pO}
+      - monitoring-loki-data:/loki
+
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail
     restart: unless-stopped
     networks:
-      - monitor-net
+      - monitoring
     labels:
       org.label-schema.group: "monitoring"
+    volumes:
+      - ./loki/promtail-config.yaml:/etc/promtail/config.yml:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
