--- a/grafana/provisioning/datasources/datasource.yml
+++ b/grafana/provisioning/datasources/datasource.yml
@@ -9,3 +9,10 @@ datasources:
     basicAuth: false
     isDefault: true
     editable: true
+
+  - name: Loki
+    type: loki
+    url: http://loki:3100
+    basicAuth: false
+    isDefault: false
+    editable: true
