--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval:     15s
-  evaluation_interval: 15s
+  scrape_interval:     5s
+  evaluation_interval: 5s
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
@@ -13,10 +13,10 @@ rule_files:
 
 # A scrape configuration containing exactly one endpoint to scrape.
 scrape_configs:
-  - job_name: 'nodeexporter'
+  - job_name: 'node-exporter'
     scrape_interval: 5s
     static_configs:
-      - targets: ['nodeexporter:9100']
+      - targets: ['node-exporter:9100']
 
   - job_name: 'cadvisor'
     scrape_interval: 5s
@@ -24,15 +24,19 @@ scrape_configs:
       - targets: ['cadvisor:8080']
 
   - job_name: 'prometheus'
-    scrape_interval: 10s
+    scrape_interval: 5s
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'pushgateway'
-    scrape_interval: 10s
-    honor_labels: true
+  - job_name: 'caddy'
+    scrape_interval: 5s
     static_configs:
-      - targets: ['pushgateway:9091']
+      - targets: ['caddy:2019']
+
+  - job_name: 'docker-exporter'
+    scrape_interval: 2m
+    static_configs:
+      - targets: ['docker-exporter:9100']
 
 
 alerting:
@@ -41,13 +45,3 @@ alerting:
     static_configs:
     - targets: 
       - 'alertmanager:9093'
-
-#  - job_name: 'nginx'
-#    scrape_interval: 10s
-#    static_configs:
-#      - targets: ['nginxexporter:9113']
-
-#  - job_name: 'aspnetcore'
-#    scrape_interval: 10s
-#    static_configs:
-#      - targets: ['eventlog-proxy:5000', 'eventlog:5000']
