--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,9 +53,9 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
-  nodeexporter:
+  node-exporter:
     image: prom/node-exporter:latest
-    container_name: nodeexporter
+    container_name: node-exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
