--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -18,6 +18,11 @@ scrape_configs:
     static_configs:
       - targets: ['node-exporter:9100']
 
+  - job_name: 'process-exporter'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['process-exporter:9256']
+
   - job_name: 'cadvisor'
     scrape_interval: 5s
     static_configs:
