--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ volumes:
       name: monitoring-grafana-data
     monitoring-loki-data:
       name: monitoring-loki-data
+    monitoring-vnstat-data:
+      name: monitoring-vnstat-data
 
 
 services:
@@ -36,6 +38,8 @@ services:
     networks:
       - monitoring
       - proxy
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     labels:
       org.label-schema.group: "monitoring"
 
@@ -72,14 +76,21 @@ services:
       org.label-schema.group: "monitoring"
 
   docker-exporter:
-    image: cefadrom/docker-exporter:1
+    image: cefadrom/docker-exporter:2.2.0
     container_name: docker-exporter
     volumes:
-      - /:/rootfs:ro
+      - /var/lib/docker/volumes:/var/lib/docker/volumes:ro
       - /var/run/docker.sock:/var/run/docker.sock
     restart: unless-stopped
     networks:
       - monitoring
+    environment:
+      CALCULATE_VOLUME_SIZE: "FALSE"
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 200M
     labels:
       org.label-schema.group: "monitoring"
 
@@ -158,26 +169,59 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
-  loki:
-    image: grafana/loki:latest
-    container_name: loki
+  vnstat:
+    image: vergoh/vnstat:latest
+    container_name: vnstat
     restart: unless-stopped
-    networks:
-      - monitoring
-    labels:
-      org.label-schema.group: "monitoring"
+    network_mode: "host"
     volumes:
-      - monitoring-loki-data:/loki
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - monitoring-vnstat-data:/var/lib/vnstat
+    environment:
+      - HTTP_PORT=0
 
-  promtail:
-    image: grafana/promtail:latest
-    container_name: promtail
+  vnstati:
+    image: vergoh/vnstat:latest
+    container_name: vnstati
     restart: unless-stopped
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - /etc/timezone:/etc/timezone:ro
+      - monitoring-vnstat-data:/var/lib/vnstat:ro
     networks:
       - monitoring
-    labels:
-      org.label-schema.group: "monitoring"
-    volumes:
-      - ./loki/promtail-config.yaml:/etc/promtail/config.yml:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+    environment:
+      - HTTP_PORT=8685
+      - HTTP_LOG=/dev/stdout
+      - LARGE_FONTS=0
+      - CACHE_TIME=1
+      - RATE_UNIT=1
+      - INTERFACE_ORDER=0
+      - DARK_MODE=1
+      - PAGE_REFRESH=0
+      - RUN_VNSTATD=0
+
+#  loki:
+#    image: grafana/loki:latest
+#    container_name: loki
+#    restart: unless-stopped
+#    networks:
+#      - monitoring
+#    labels:
+#      org.label-schema.group: "monitoring"
+#    volumes:
+#      - monitoring-loki-data:/loki
+
+#  promtail:
+#    image: grafana/promtail:latest
+#    container_name: promtail
+#    restart: unless-stopped
+#    networks:
+#      - monitoring
+#    labels:
+#      org.label-schema.group: "monitoring"
+#    volumes:
+#      - ./loki/promtail-config.yaml:/etc/promtail/config.yml:ro
+#      - /var/run/docker.sock:/var/run/docker.sock
+#      - /var/lib/docker/containers:/var/lib/docker/containers:ro
