--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -38,11 +38,21 @@ scrape_configs:
     static_configs:
       - targets: ['caddy:2019']
 
+  - job_name: 'vnstat'
+    scrape_interval: 30s
+    static_configs:
+      - targets: ['vnstati:8685']
+
   - job_name: 'docker-exporter'
     scrape_interval: 2m
     scrape_timeout: 1m
     static_configs:
       - targets: ['docker-exporter:9100']
+
+#  - job_name: 'prominence'
+#    scrape_interval: 2s
+#    static_configs:
+#      - targets: ['prominence:25585']
 
 
 alerting:
